# src/routes/index.js
@@ -4,7 +4,9 @@ const router  = express.Router();
 
 const users = require("./users");
 
-const slurs = require("./slurs");
+const sustantivo = require("./sustantivos");
+
+const verbo = require("./verbos");
 
 router.use("/users", users);
 
